--- a/html/main.css
+++ b/html/main.css
@@ -14,7 +14,9 @@
     white-space: nowrap;
     
 }
-th, td {
-    border: 1px solid black;
-    width: 200px;
+@media screen and (max-width: 640px) {
+	table {
+		overflow-x: auto;
+		display: block;
+	}
 }
